adjusting for deploy

--- a/burger-queen/public/index.html
+++ b/burger-queen/public/index.html
@@ -30,9 +30,9 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
-<script src="/__/firebase/7.5.2/firebase-app.js"></script>
+<!-- <script src="/__/firebase/7.5.2/firebase-app.js"></script>
 <script src="/__/firebase/7.5.2/firebase-analytics.js"></script>
-<script src="/__/firebase/init.js"></script>
+<script src="/__/firebase/init.js"></script> -->
 
     <!--
       This HTML file is a template.
